[gd_scene load_steps=3 format=3 uid="uid://14y1lokx38om"]

[ext_resource type="Theme" uid="uid://rpcynb827u8m" path="res://Scenes/UI/SpellboundTheme.tres" id="1_2qg7e"]
[ext_resource type="Script" path="res://Scenes/UI/menus/menu_title.gd" id="2_mspv0"]

[node name="Start_title" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_2qg7e")
script = ExtResource("2_mspv0")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.180392, 0.129412, 0.207843, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.764706, 0.8, 0.717647, 1)
theme_override_font_sizes/font_size = 125
text = "SPELLBOUND"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="menuContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/menuContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Start" type="Button" parent="VBoxContainer/HBoxContainer/menuContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Start New Game From Begining"
theme = ExtResource("1_2qg7e")
text = "START"

[node name="Load" type="Button" parent="VBoxContainer/HBoxContainer/menuContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Load Last Game"
theme = ExtResource("1_2qg7e")
text = "LOAD"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/menuContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Credits" type="Button" parent="VBoxContainer/HBoxContainer/menuContainer/HBoxContainer2"]
layout_mode = 2
text = "CREDITS"

[node name="Options" type="Button" parent="VBoxContainer/HBoxContainer/menuContainer/HBoxContainer2"]
layout_mode = 2
text = "OPTIONS"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/menuContainer/HBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/menuContainer/HBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/menuContainer/HBoxContainer2/Credits" to="." method="_on_credits_pressed"]
